# openatd

./: .gitmodules  CMakeLists.txt  README.md
include/: config.hpp  monitors.hpp  strategy.hpp
include/atd/: buylowandhodl.hpp  channel.hpp  config.hpp  datamonitor.hpp  dollarcostaveraging.hpp  hodl.hpp  smallchanges.hpp  strategy.hpp  trader.hpp  types.hpp
include/atd/stats/: ExponentialSmoothing.hpp  namespace.hpp
misc/systemd/: openatd@.service
src/: CMakeLists.txt  config.cc  main.cc  monitors.cc
src/atd/: buylowandhodl.cc  config.cc  datamonitor.cc  dollarcostaveraging.cc  smallchanges.cc  trader.cc
src/atd/stats/: ExponentialSmoothing.cc
